<resources>
    <string name="app_name">pokemonApp</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_here">Sign up here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">¡Bienvenido, %1$s!</string>
</resources>